# infiniservice

./: CHANGELOG_LOG_SPAM_FIX.md  Cargo.toml  Cargo.toml.backup  PRIVILEGE_DETECTION_IMPLEMENTATION.md  README.md  build-installer.sh  deploy.sh  q  sign-windows.sh
doc/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  PROTOCOL.md  README.md
doc/infrastructure/: cross-platform.md  virtio-serial.md
doc/integration/: backend-integration.md
doc/patterns/: async-patterns.md
docs/libraries/: README.md  filetime.md  image.md  netstat2.md  notify.md  sysinfo.md  winapi.md  windows-service.md
examples/: test_collector.rs  test_privilege_detection.rs
install/: cloud-init-ubuntu.yaml  install-infiniservice-firstlogon.ps1  install-infiniservice-with-logging.ps1  install-windows.ps1  post-install.bat  test-powershell-syntax.ps1  windows-unattended-debug.xml  windows-unattended-minimal.xml  windows-unattended-visible.xml  windows-unattended.xml
scripts/: configure-vm.sh  diagnose-virtio.ps1  rebuild-and-deploy.sh
src/: collector.rs  communication.rs  communication.rs.backup  config.rs  lib.rs  main.rs  main_simple.rs  os_detection.rs  service.rs  service_simple.rs  windows_com.rs
src/commands/: application_inventory.rs  autochecks.rs  executor.rs  linux_update_checker.rs  mod.rs  package_management.rs  process_control.rs  safe_executor.rs  service_control.rs  unsafe_executor.rs  update_checker.rs  update_checker_factory.rs  windows_defender.rs  windows_update_checker.rs  windows_updates.rs
src/commands/autochecks/: health_checks.rs  remediation.rs
