[package]
name = "infiniservice"
version = "0.1.0"
edition = "2021"
authors = ["Infinibay Team"]
description = "Multiplatform background service for VM data collection and communication via virtio-serial"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Cross-platform utilities
dirs = "5.0"
uuid = { version = "1.0", features = ["v4"] }

# Configuration
config = "0.14"

# System monitoring and information
sysinfo = "0.36"

# Network monitoring and connections
netstat2 = "0.11"

# File system monitoring and notifications
notify = "8.0"

# File timestamp operations
filetime = "0.2"

# Image processing (for icon extraction)
image = "0.25"

[target.'cfg(windows)'.dependencies]
# Windows API bindings for icon extraction and system operations
winapi = { version = "0.3", features = [
    "winuser", "shellapi", "commdlg", "processthreadsapi",
    "psapi", "winnt", "handleapi", "fileapi", "errhandlingapi",
    "setupapi", "devguid", "winreg", "winbase", "commapi", 
    "ioapiset", "synchapi", "minwinbase", "winerror"
] }

# Windows service management
windows-service = "0.8"

# Windows performance counters
wmi = "0.13"

# Serial port communication for Windows VirtIO
serialport = "4.2"

[target.'cfg(target_os = "linux")'.dependencies]
# Process and system metrics for Linux
procfs = "0.17"
